--- a/style.css
+++ b/style.css
@@ -2,13 +2,42 @@
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
+	font-family: Lucida Console;
 }
 
 body {
-	background-color: red;
+}
+
+h1 {
+	color: orange;
+}
+
+header {
+	margin: 20px auto 20px;
+	background-color: darkslategrey;
+	text-align: center;
+	padding: 20px;
+	width: 20%;
+}
+
+p {
+	margin: 10px auto 10px;
+	color: white;
+}
+
+footer {
+	margin: 20px auto 20px;
+	width: 20%;
+	background-color: darkslategrey;
+	text-align: center;
+}
+
+section {
+	margin: 0 auto 0;
+	width: 600px;
+	height: 400px;
 }
 
 #screen {
-	width: 400px;
-	height: 300px;
+	border: 5px solid black;
 }
