--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
-* {
+* 
+{ 
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
 	font-family: Lucida Console;
 }
 
-body {
+body 
+{
+
 }
 
-h1 {
+h1 
+{
 	color: orange;
 }
 
-header {
+header 
+{
 	margin: 20px auto 20px;
 	background-color: darkslategrey;
 	text-align: center;
@@ -20,24 +25,70 @@ header {
 	width: 20%;
 }
 
-p {
+p 
+{
 	margin: 10px auto 10px;
 	color: white;
 }
 
-footer {
+footer 
+{
 	margin: 20px auto 20px;
 	width: 20%;
 	background-color: darkslategrey;
 	text-align: center;
 }
 
-section {
+#links ul
+{
+    position: absolute;
+    top: 130px;
+    left: 20px;
+    list-style-type: none;
+}
+
+#links li a
+{
+    text-decoration: none;
+    font-size: 2.5em;
+    color: blue;
+    font-family: Monospace;
+}
+
+#links li a:hover
+{
+    -webkit-text-stroke: 1px white;
+}
+
+#logo
+{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 4em;
+    color: white;
+    -webkit-text-stroke: 1px black;
+    text-shadow: 3px 3px #222222
+}
+
+#canvas
+{
 	margin: 0 auto 0;
 	width: 600px;
 	height: 400px;
 }
 
-#screen {
+#side
+{
+    position: absolute;
+    width: 10%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: orange;
+}
+
+#screen 
+{
 	border: 5px solid black;
 }
