--- a/style.css
+++ b/style.css
@@ -3,92 +3,46 @@
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
-	font-family: Lucida Console;
+	font-family: Verdana;
+  font-size: 16px;
 }
 
-body 
+html, body 
 {
-
+  width: 100%;
+  height: 100%;
 }
 
-h1 
+p#front 
 {
-	color: orange;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  display: inline-block;
+  color: white;
+  background-color: #ff5700;
+  margin: auto;
+  font-size: 10em;;
+  width: 40%;
+  height: 30%;
+  text-align: center;
+  text-shadow: 5px 5px #aa7700;
 }
 
-header 
+div#back 
 {
-	margin: 20px auto 20px;
-	background-color: darkslategrey;
-	text-align: center;
-	padding: 20px;
-	width: 20%;
-}
-
-p 
-{
-	margin: 10px auto 10px;
-	color: white;
-}
-
-footer 
-{
-	margin: 20px auto 20px;
-	width: 20%;
-	background-color: darkslategrey;
-	text-align: center;
-}
-
-#links ul
-{
-    position: absolute;
-    top: 130px;
-    left: 20px;
-    list-style-type: none;
-}
-
-#links li a
-{
-    text-decoration: none;
-    font-size: 2.5em;
-    color: blue;
-    font-family: Monospace;
-}
-
-#links li a:hover
-{
-    -webkit-text-stroke: 1px white;
-}
-
-#logo
-{
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-size: 4em;
-    color: white;
-    -webkit-text-stroke: 1px black;
-    text-shadow: 3px 3px #222222
-}
-
-#canvas
-{
-	margin: 0 auto 0;
-	width: 600px;
-	height: 400px;
-}
-
-#side
-{
-    position: absolute;
-    width: 10%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background-color: orange;
-}
-
-#screen 
-{
-	border: 5px solid black;
+  left: 30px;
+  right: 0;
+  top: 30px;
+  bottom: 0;
+  position: absolute;
+  display: inline-block;
+  color: white;
+  background-color: #ff2222;
+  margin: auto;
+  font-size: 10em;;
+  width: 40%;
+  height: 30%;
 }
