--- a/style.css
+++ b/style.css
@@ -13,36 +13,36 @@ html, body
   height: 100%;
 }
 
+div#container
+{
+  position: absolute;
+  top: 35%;
+  left: 30%;
+  width: 40%;
+  height: 30%;
+}
+
 p#front 
 {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   position: absolute;
-  display: inline-block;
   color: white;
   background-color: #ff5700;
   margin: auto;
   font-size: 10em;;
-  width: 40%;
-  height: 30%;
+  width: 100%;
+  height: 100%;
   text-align: center;
   text-shadow: 5px 5px #aa7700;
 }
 
 div#back 
 {
-  left: 30px;
-  right: 0;
-  top: 30px;
-  bottom: 0;
   position: absolute;
-  display: inline-block;
   color: white;
   background-color: #ff2222;
   margin: auto;
-  font-size: 10em;;
-  width: 40%;
-  height: 30%;
+  font-size: 10em;
+  width: 100%;
+  height: 100%;
+  top: 30px;
 }
