--- a/0/style.css
+++ b/0/style.css
@@ -1,4 +1,4 @@
-* 
+
 { 
 	margin: 0px;
 	padding: 0px;
@@ -45,4 +45,16 @@ div#back
   width: 100%;
   height: 100%;
   top: 30px;
+}
+
+header {
+  width: 100vw;
+  height: 10vh;
+  background-color: #ff9900;
+}
+
+footer {
+  width: 100vw;
+  height; 10vh;
+  background-color: #ff9900;
 }
